[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/Kenney Future Narrow.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://intro/script/methods_looping.gd" type="Script" id=2]
[ext_resource path="res://intro/picture/close.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 1 )

[node name="methods_looping" type="Node"]
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="methods" type="RichTextLabel" parent="Panel"]
margin_left = 135.0
margin_top = 8.0
margin_right = 192.0
margin_bottom = 25.0
custom_fonts/normal_font = SubResource( 2 )
text = "Looping"

[node name="Control" type="Control" parent="Panel"]
margin_left = 7.0
margin_top = 30.0
margin_right = 107.0
margin_bottom = 175.0

[node name="While" type="Button" parent="Panel/Control"]
margin_left = 107.0
margin_top = 28.0
margin_right = 203.0
margin_bottom = 43.0
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "While"

[node name="dowhile" type="Button" parent="Panel/Control"]
margin_left = 107.0
margin_top = 47.0
margin_right = 203.0
margin_bottom = 62.0
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "dowhile"

[node name="for" type="Button" parent="Panel/Control"]
margin_left = 107.0
margin_top = 66.0
margin_right = 203.0
margin_bottom = 81.0
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "for"

[node name="close" type="TextureButton" parent="Panel"]
margin_left = 297.0
margin_top = 6.0
margin_right = 310.0
margin_bottom = 16.0
texture_normal = ExtResource( 5 )

[connection signal="pressed" from="Panel/Control/While" to="." method="_on_while_pressed"]
[connection signal="pressed" from="Panel/Control/dowhile" to="." method="_on_dowhile_pressed"]
[connection signal="pressed" from="Panel/Control/for" to="." method="_on_for_pressed"]
[connection signal="pressed" from="Panel/close" to="." method="_on_close_pressed"]
